--- a/newspaper-api.yml
+++ b/newspaper-api.yml
@@ -60,20 +60,20 @@ spec:
     spec:
       containers:
       - name: master
-        image: smarp/newspaper-api:1.3.1
+        image: smarp/newspaper-api:1.3.3
         resources:
           requests:
-            cpu: 200m
-            memory: 300Mi
+            cpu: 100m
+            memory: 100Mi
         livenessProbe:
           # an http probe
           httpGet:
-            path: /topimage?url=https://www.smarp.com/
+            path: /topimage?url=https://www.smarp.com
             port: 38765
           # length of time to wait for a pod to initialize
           # after pod startup, before applying health checking
           initialDelaySeconds: 10
-          timeoutSeconds: 3
+          timeoutSeconds: 10
           successThreshold: 1
           failureThreshold: 1
           periodSeconds: 30
@@ -89,6 +89,6 @@ spec:
   scaleTargetRef:
     kind: Deployment
     name: newspaper-api
-  minReplicas: 3
+  minReplicas: 2
   maxReplicas: 100
   targetCPUUtilizationPercentage: 50
