Set PDB minAvailable to 50%

--- a/newspaper-api.yml
+++ b/newspaper-api.yml
@@ -86,7 +86,7 @@ kind: PodDisruptionBudget
 metadata:
   name: newspaper-pdb
 spec:
-  minAvailable: 1
+  minAvailable: 50%
   selector:
     matchLabels:
       app: newspaper
