Technical: ensure production readiness (#17)
* Set pod resources limits

* Remove useless comments

* Set PDB minAvailable to 50%

* Move probes path to /health and tweak settings

--- a/newspaper-api.yml
+++ b/newspaper-api.yml
@@ -34,23 +34,8 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: newspaper-api
-  # these labels can be applied automatically
-  # from the labels in the pod template if not set
-  # labels:
-  #   app: redis
-  #   role: master
-  #   tier: backend
 spec:
-  # this replicas value is default
-  # modify it according to your case
   replicas: 3
-  # selector can be applied automatically
-  # from the labels in the pod template if not set
-  # selector:
-  #   matchLabels:
-  #     app: guestbook
-  #     role: master
-  #     tier: backend
   template:
     metadata:
       labels:
@@ -66,17 +51,26 @@ spec:
           requests:
             cpu: 200m
             memory: 400Mi
-        livenessProbe:
-          # an http probe
+          limits:
+            cpu: 400m
+            memory: 640Mi
+        readinessProbe:
           httpGet:
-            path: /topimage?url=https://s3-eu-west-1.amazonaws.com/pingdom-test/Smarp.html
+            path: /health
             port: 38765
-          # length of time to wait for a pod to initialize
-          # after pod startup, before applying health checking
           initialDelaySeconds: 10
-          timeoutSeconds: 10
+          timeoutSeconds: 5
           successThreshold: 1
-          failureThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 38765
+          initialDelaySeconds: 20
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
           periodSeconds: 30
         ports:
         - containerPort: 38765
@@ -99,7 +93,7 @@ kind: PodDisruptionBudget
 metadata:
   name: newspaper-pdb
 spec:
-  minAvailable: 1
+  minAvailable: 50%
   selector:
     matchLabels:
       app: newspaper
