Fix deployment api version and required selector

--- a/newspaper-api.yml
+++ b/newspaper-api.yml
@@ -30,12 +30,17 @@ spec:
     tier: backend
     role: master
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: newspaper-api
 spec:
   replicas: 3
+  selector:
+    matchLabels:
+      app: newspaper
+      role: master
+      tier: backend
   template:
     metadata:
       labels:
