--- a/newspaper-api.yml
+++ b/newspaper-api.yml
@@ -80,18 +80,38 @@ spec:
         ports:
         - containerPort: 38765
 ---
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: newspaper-api
   namespace: default
 spec:
   scaleTargetRef:
+    apiVersion: apps/v1
     kind: Deployment
     name: newspaper-api
   minReplicas: 3
   maxReplicas: 10
-  targetCPUUtilizationPercentage: 60
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 60
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300 # desired replicas capped to the maximum recommendation within 5 mins
+      policies: # limit scale down rate, max 1 pod every 10 mins
+      - type: Pods
+        value: 1
+        periodSeconds: 600
+    scaleUp:
+      stabilizationWindowSeconds: 0 # no stabilisation
+      policies: # limit scale up rate, max 2 pods every min
+      - type: Pods
+        value: 2
+        periodSeconds: 60
 ---
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
