--- a/newspaper-api.yml
+++ b/newspaper-api.yml
@@ -95,10 +95,10 @@ spec:
   metrics:
   - type: Resource
     resource:
-      name: cpu
+      name: memory
       target:
         type: Utilization
-        averageUtilization: 60
+        averageUtilization: 75
   behavior:
     scaleDown:
       stabilizationWindowSeconds: 300 # desired replicas capped to the maximum recommendation within 5 mins
