--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -5,9 +5,9 @@ application:
   frontendPath:
   apiPort: 38765
   livenessProbe:
-    path: /healthz
+    path: /health
   readinessProbe:
-    path: /healthz
+    path: /health
 
 image:
   repository: smarp/newspaper-api:v2.4
@@ -44,33 +44,17 @@ service:
   type: ClusterIP
   port: 80
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+   limits:
+     cpu: 750m
+     memory: 640Mi
+   requests:
+     cpu: 400m
+     memory: 400Mi
 
 autoscaling:
   enabled: false
