--- a/helm-chart/templates/tests/test-connection.yaml
+++ b/helm-chart/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "helm-chart.fullname" . }}-test-connection"
+  name: "{{ include "newspaper-api.fullname" . }}-test-connection"
   labels:
-    {{- include "helm-chart.labels" . | nindent 4 }}
+    {{- include "newspaper-api.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "helm-chart.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "newspaper-api.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
