--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -58,3 +58,14 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      env:
+        - name: CUSTOM_USER_AGENT
+          valueFrom:
+            configMapKeyRef:
+              name: newspaper-api-env
+              key: custom_user_agent
+        - name: CUSTOM_DOMAINS
+          valueFrom:
+            configMapKeyRef:
+              name: newspaper-api-env
+              key: custom_domains
