--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -6,8 +6,18 @@ application:
   apiPort: 38765
   livenessProbe:
     path: /health
+    initialDelaySeconds: 20
+    timeoutSeconds: 5
+    successThreshold: 1
+    failureThreshold: 3
+    periodSeconds: 30
   readinessProbe:
     path: /health
+    initialDelaySeconds: 10
+    timeoutSeconds: 5
+    successThreshold: 1
+    failureThreshold: 3
+    periodSeconds: 10
 
 image:
   repository: smarp/newspaper-api
