--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -58,7 +58,7 @@ resources:
     memory: 400Mi
 
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 100
   targetMemoryUtilizationPercentage: 75
